fix(navbar): z-index

--- a/app/layout/style/navbar.scss
+++ b/app/layout/style/navbar.scss
@@ -2,6 +2,8 @@
     position: fixed;
     top: 0;
 
+    z-index: 999;
+
     width: 100%;
 
     padding: 1rem 2rem;
